--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="js/helper.js"></script>
 
   
-<!-- <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script> -->
+ <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script> 
 
   <meta name="viewport" content="width=device-width">
 </head>
